Version 1.14 - 2017-11-09
BUG#6433 Compatibility with distribution_portfolio module

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Update beneficiary endorsement to new endorsement architecture

Version 1.6 - 2015-12-23
* FEA#0000 Add default endorsement beneficiary configuration

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Module Creation