@@ -1,3 +1,5 @@
+* BUG#7696 : Vérification du caractère personnalisable de la clause dans l'avenant de bénéficiaire
+
 Version 1.14 - 2017-11-09
 BUG#6433 Compatibilité avec le module distribution_portfolio
 
