@@ -1,3 +1,5 @@
+* BUG#7696 : Check for customizable clause in beneficiary endorsement
+
 Version 1.14 - 2017-11-09
 BUG#6433 Compatibility with distribution_portfolio module
 
